--- a/filesorterartfact/src/main/resources/application.properties
+++ b/filesorterartfact/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.port=7071
 # Set here configurations for the database connection
 #spring.datasource.url=jdbc:mysql://192.168.0.251:3306/scadaalarmsdb
 #testing untracked properties
-spring.datasource.url=jdbc:mysql://localhost:3306/ea2_db_jul_2019
-#spring.datasource.url = jdbc:mysql://192.168.0.251:3306/eap_db_dec_14
+#spring.datasource.url=jdbc:mysql://localhost:3306/eap_db_dec_14
+spring.datasource.url = jdbc:mysql://192.168.0.251:3306/ea2_db_jul_2019
 #spring.datasource.url = jdbc:mysql://192.168.0.251:3306/eap_db_dec_14
 spring.datasource.username=pstcl
 spring.datasource.password=pstcl
